--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>百度一下，你就知道</title>
+		<link rel="icon" href="img/xx.png" />
 		<link  rel="stylesheet" href="css/baidu.css" />
 	</head>
 	<body>
