--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link  rel="stylesheet" href="css/baidu.css" />
 	</head>
 	<body>
+		<div class="xx">
 		<div class="s">
 			<div class="v">
 			<ul>
@@ -20,7 +21,6 @@
 				<li><a href="http://www.baidu.com/more/" id="g">更多产品</a></li>
 			</ul>
 			</div>
-
 		</div>
 		<div class="x">
 			<img src="http://www.baidu.com/img/bd_logo1.png" width="270" height="129" id="z"/>
@@ -32,7 +32,7 @@
 		<div class="q">
 			
 		</div>
-		<div>
+		<div id="o">
 			<div class="y">
 				<img src="img/baidu.png.png"/>
 			</div>
@@ -48,7 +48,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11000002000001"  id="m">京公网安备11000002000001号</a><img src="img/ga.png"/></div>
 				</div>
 		</div>
-	
-
+		</div>
 	</body>
 </html>
